# graphs

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  TAG_AND_CLEANUP_INSTRUCTIONS.md  ZUSAMMENFASSUNG.md  boolean_matrix_multiplier.py  demo_brain_direction.py  demo_brain_rotation.py  pyproject.toml  requirements.txt
.github/workflows/: create-tag-and-cleanup.yml
doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_boolean_matrix_multiplier_py.html  z_145eef247bfb46b6_brain_information_processing_py.html  z_145eef247bfb46b6_brain_rotation_experiments_py.html  z_145eef247bfb46b6_brain_scale_graph_experiments_py.html  z_145eef247bfb46b6_graph_profile_py.html  z_145eef247bfb46b6_run_experiments_py.html
science/: graphs.tex
src/: boolean_matrix_multiplier.py  brain_information_processing.py  brain_rotation_experiments.py  brain_scale_graph_experiments.py  demo_brain_direction.py  graph_profile.py
src/results/: brain_scale_results.json  distribution.json  gen_svg.py  report.txt
src/results/brain_scale/: brain_scale_results.json  distribution.json  log.txt
tests/: test_brain_direction.py  test_brain_information_processing.py  test_graph_profile.py  test_integration.py
