[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphs"
version = "2.0.0"
description = "Graphprofil-Berechnung mit Boolean Matrixmultiplikation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Stephan Epp", email = "hjstephan86@gmail.com"}
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]
markers = [
    "slow: markiert Tests als langsam",
    "integration: markiert Integrationstests",
    "unit: markiert Unit-Tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "src/brain_scale_graph_experiments.py",
    "src/brain_rotation_experiments.py",
    "src/boolean_matrix_multiplier.py",
    "src/demo_brain_direction.py",
    "src/demo_brain_rotation.py",
    "src/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
